force-app/main/default/objects/Account/fields/Account_Balance_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance_2__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-509</description>
    <inlineHelpText>What is the current balance for this Account (excluding potential open balance in Netsuite)?</inlineHelpText>
    <label>Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>