force-app/main/default/objects/Account/fields/Account_Data_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Data_Status__c</fullName>
    <label>Account Data Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Checked by AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>