force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active Customer</fullName>
                <color>#66FF99</color>
                <label>Active Customer</label>
            </value>
            <value>
                <fullName>Future Customer</fullName>
            </value>
            <value>
                <fullName>Hardware Customer</fullName>
            </value>
            <value>
                <fullName>Incomplete Customer</fullName>
            </value>
            <value>
                <fullName>Legacy NetSuite Customer</fullName>
            </value>
            <value>
                <fullName>Lost Customer</fullName>
                <color>#FF0000</color>
                <label>Lost Customer</label>
            </value>
            <value>
                <fullName>Lost Hardware Customer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Paused Customer</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <color>#DDDDDD</color>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Prospect (Closed Lost)</fullName>
            </value>
            <value>
                <fullName>Prospect (Committed)</fullName>
            </value>
            <value>
                <fullName>Prospect (Introduction / Demo)</fullName>
            </value>
            <value>
                <fullName>Prospect (Potential)</fullName>
            </value>
            <value>
                <fullName>Prospect (Proposal)</fullName>
            </value>
            <value>
                <fullName>Prospect (Qualification)</fullName>
            </value>
            <value>
                <fullName>Product Test Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>