force-app/main/default/objects/Account/fields/Account_Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Flag__c</fullName>
    <formula>IMAGE(
CASE(Account_Status__c, 
&quot;Active Customer&quot;,&quot;/resource/icons/icons/check.png&quot;,
&quot;Lost Customer&quot;,&quot;/resource/icons/icons/close.png&quot;,
&quot;Paused Customer&quot;,&quot;/resource/icons/icons/pause.png&quot;,
&quot;Future Customer&quot;,&quot;/resource/icons/icons/clock.png&quot;,
&quot;Hardware Customer&quot;,&quot;/resource/icons/icons/desktop.png&quot;,
&quot;Incomplete Customer&quot;,&quot;/resource/icons/icons/info_alt.png&quot;,
&quot;Lost Hardware Customer&quot;,&quot;/resource/icons/icons/close.png&quot;,
&quot;Legacy NetSuite Customer&quot;,&quot;/resource/icons/icons/database.png&quot;,
&quot;Partner&quot;,&quot;/resource/icons/icons/crossfilter.png&quot;,
&quot;Prospect (Closed Lost)&quot;,&quot;/resource/icons/icons/close.png&quot;,
&quot;/resource/icons/icons/add.png&quot;),
&quot;n/a&quot;, 25, 25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>