force-app/main/default/objects/Account/fields/AccountManager__c.field-meta.xml
<CustomField>
    <fullName>AccountManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User lookup to specify the Account Manager</description>
    <inlineHelpText>Responsible Account Manager for this Account</inlineHelpText>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>