force-app/main/default/objects/Account/fields/Address_Error__c.field-meta.xml
<CustomField>
    <fullName>Address_Error__c</fullName>
    <formula>( TEXT(AddressSyncType__c) = &apos;ALL&apos; || TEXT(AddressSyncType__c) = &apos;BILL-VENUE&apos;)
&amp;&amp; (
(BillingStreet &lt;&gt; VenueStreet__c )
||(BillingCity &lt;&gt; VenueCity__c )
||(BillingPostalCode &lt;&gt; VenuePostalCode__c )
||(BillingCountry &lt;&gt; text(VenueCountry__c) )
)
&amp;&amp;  !(CONTAINS( SF_BillTo_Contact__r.FirstName , &quot;MyOrderbird&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Error</label>
    <type>Checkbox</type>
</CustomField>