force-app/main/default/objects/Account/fields/AddressBuilder__c.field-meta.xml
<CustomField>
    <fullName>AddressBuilder__c</fullName>
    <defaultValue>&quot;[\&quot;LegalCompanyName__c\&quot;,\&quot;SF_BillTo_Contact__r.Name\&quot;,\&quot;empty\&quot;]&quot;</defaultValue>
    <label>Address Builder (Billing)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>