force-app/main/default/objects/Account/fields/AddressBuilder_Shipping__c.field-meta.xml
<CustomField>
    <fullName>AddressBuilder_Shipping__c</fullName>
    <defaultValue>&quot;[\&quot;LegalCompanyName__c\&quot;,\&quot;SF_SoldTo_Contact__r.Name\&quot;,\&quot;empty\&quot;]&quot;</defaultValue>
    <label>Address Builder (Shipping)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>