force-app/main/default/objects/Account/fields/AddressBuilder_Venue__c.field-meta.xml
<CustomField>
    <fullName>AddressBuilder_Venue__c</fullName>
    <label>Address Builder (Venue)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>