force-app/main/default/objects/Account/fields/AddressBuilderMatch__c.field-meta.xml
<CustomField>
    <fullName>AddressBuilderMatch__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(AddressBuilder__c,&quot;Bill&quot;,&quot;Sold&quot;),&quot;,null&quot;,&quot;&quot;),&quot;,\&quot;empty\&quot;&quot;,&quot;&quot;) = 
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(AddressBuilder_Shipping__c,&quot;Bill&quot;,&quot;Sold&quot;),&quot;,null&quot;,&quot;&quot;),&quot;,\&quot;empty\&quot;&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AddressBuilderMatch</label>
    <type>Checkbox</type>
</CustomField>