force-app/main/default/objects/Account/fields/AddressSyncType__c.field-meta.xml
<CustomField>
    <fullName>AddressSyncType__c</fullName>
    <label>Address Sync Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
            <value>
                <fullName>SHIP-VENUE</fullName>
            </value>
            <value>
                <fullName>BILL-SHIP</fullName>
            </value>
            <value>
                <fullName>BILL-VENUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>