force-app/main/default/objects/Account/fields/Age_Acc__c.field-meta.xml
<CustomField>
    <fullName>Age_Acc__c</fullName>
    <formula>TODAY()-DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Acc)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>