force-app/main/default/objects/Account/fields/Age_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Age_in_Days__c</fullName>
    <formula>IF(ISBLANK(Closed_Contract_Date__c),null,TODAY() - Closed_Contract_Date__c)</formula>
    <label>Age as Customer in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>