force-app/main/default/objects/Account/fields/AirfyCustomerID__c.field-meta.xml
<CustomField>
    <fullName>AirfyCustomerID__c</fullName>
    <description>Stakeholder: PM</description>
    <inlineHelpText>What was the Airfy Customer ID? Not relevant anymore</inlineHelpText>
    <label>Airfy Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>