force-app/main/default/objects/Account/fields/AutoPay__c.field-meta.xml
<CustomField>
    <fullName>AutoPay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AutoPay</label>
    <type>Checkbox</type>
</CustomField>