force-app/main/default/objects/Account/fields/AutoPayUncheckedReason__c.field-meta.xml
<CustomField>
    <fullName>AutoPayUncheckedReason__c</fullName>
    <label>AutoPay Unchecked Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>