force-app/main/default/objects/Account/fields/Bad_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Bad_Customer_Number__c</fullName>
    <formula>NOT(ISNUMBER(SUBSTITUTE(CustomerID__c,&quot;:&quot;,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bad Customer Number</label>
    <type>Checkbox</type>
</CustomField>