force-app/main/default/objects/Account/fields/Bambora_ID__c.field-meta.xml
<CustomField>
    <fullName>Bambora_ID__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-1984</description>
    <label>Bambora ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>