force-app/main/default/objects/Account/fields/Bambora_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Bambora_Opportunity__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-2517
Stakeholder: Pay &amp; AccM</description>
    <inlineHelpText>What is this Account&apos;s Opportunity in Bambora&apos;s Salesforce Org? Managed by AccM</inlineHelpText>
    <label>Bambora Opportunity</label>
    <type>Url</type>
</CustomField>