force-app/main/default/objects/Account/fields/Batch7_Age__c.field-meta.xml
<CustomField>
    <fullName>Batch7_Age__c</fullName>
    <label>Batch7 Age</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>