force-app/main/default/objects/Account/fields/Batch7_SinceMay__c.field-meta.xml
<CustomField>
    <fullName>Batch7_SinceMay__c</fullName>
    <formula>IF(NOT(ISBLANK(Batch7_Age__c)), IF(Batch7_Age__c &lt; (TODAY()-DATE(2019,5,1)),TRUE,FALSE) ,FALSE)</formula>
    <label>Batch7 SinceMay</label>
    <type>Checkbox</type>
</CustomField>