force-app/main/default/objects/Account/fields/Batch_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Batch_Payment_Method__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-2747</description>
    <formula>CASE( Batch__c , 
 &quot;Batch4&quot;, &quot;Installment Payments&quot;,
 &quot;Batch2&quot;, &quot;SEPA&quot;, 
 &quot;Batch5&quot;, IF( 
   AND(NOT(ISBLANK(DefaultPaymentMethod__c)), AutoPay__c = true,   DefaultPaymentMethod__r.PaymentMethodStatus__c = &quot;Active&quot;), 
    &quot;SEPA&quot;,
    &quot;Wire Transfer&quot;),
 &quot;Batch10&quot;, &quot;Installment&quot;,
&quot;Wire Transfer&quot;)</formula>
    <inlineHelpText>It shown the recommended payment method for the customer, considering its current billing batch.</inlineHelpText>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>