force-app/main/default/objects/Account/fields/BetaTestCustomer__c.field-meta.xml
<CustomField>
    <fullName>BetaTestCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: PM (Florian Redeker)</description>
    <inlineHelpText>Is this Account a beta tester for orderbird? Only to be set by PM!</inlineHelpText>
    <label>Beta Test Customer</label>
    <type>Checkbox</type>
</CustomField>