force-app/main/default/objects/Account/fields/BillCycleDay__c.field-meta.xml
<CustomField>
    <fullName>BillCycleDay__c</fullName>
    <label>Bill Cycle Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>