force-app/main/default/objects/Account/fields/Billing_Amount_net__c.field-meta.xml
<CustomField>
    <fullName>Billing_Amount_net__c</fullName>
    <description>Sum of &quot;Amount Without Tax&quot; of all related invoices with Status=posted</description>
    <inlineHelpText>Sum of total net amount of all related invoices</inlineHelpText>
    <label>Billing Amount (net)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>