force-app/main/default/objects/Account/fields/BillingAmount__c.field-meta.xml
<CustomField>
    <fullName>BillingAmount__c</fullName>
    <label>Billing Amount</label>
    <summarizedField>Invoice__c.AmountWithoutTax__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Status__c</field>
        <operation>equals</operation>
        <value>Posted</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>