force-app/main/default/objects/Account/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <formula>SF_BillTo_Contact__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingCity</label>
    <type>Text</type>
</CustomField>