force-app/main/default/objects/Account/fields/BillingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>BillingCountryCode__c</fullName>
    <formula>TEXT(BillingCountryCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingCountryCode</label>
    <type>Text</type>
</CustomField>