force-app/main/default/objects/Account/fields/Caller_Contact__c.field-meta.xml
<CustomField>
    <fullName>Caller_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>https://jira.orderbird.com/browse/SFDC-1365</description>
    <label>Caller Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Caller Contact)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>