force-app/main/default/objects/Account/fields/Cashless_only_Pay__c.field-meta.xml
<CustomField>
    <fullName>Cashless_only_Pay__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-1984</description>
    <label>Cashless only (Pay)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>