force-app/main/default/objects/Account/fields/CC_GP_Nr__c.field-meta.xml
<CustomField>
    <fullName>CC_GP_Nr__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-1984</description>
    <label>CC GP-Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>