force-app/main/default/objects/Account/fields/CCD_IO2__c.field-meta.xml
<CustomField>
    <fullName>CCD_IO2__c</fullName>
    <label>CCD_IO2</label>
    <summarizedField>Subscription__c.ContractEffectiveDate__c</summarizedField>
    <summaryFilterItems>
        <field>Subscription__c.HasDifferentInvoiceOwner2__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Subscription__c.Account__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>