force-app/main/default/objects/Account/fields/CCD_IO__c.field-meta.xml
<CustomField>
    <fullName>CCD_IO__c</fullName>
    <label>CCD IO</label>
    <type>Date</type>
</CustomField>