force-app/main/default/objects/Account/fields/CCD_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>CCD_NetSuite__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-125</description>
    <inlineHelpText>BI Field</inlineHelpText>
    <label>CCD NetSuite</label>
    <type>Date</type>
</CustomField>