force-app/main/default/objects/Account/fields/CCD_Zu__c.field-meta.xml
<CustomField>
    <fullName>CCD_Zu__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-511</description>
    <inlineHelpText>When was the first contract closed according to Zuora?</inlineHelpText>
    <label>CCD Zuora</label>
    <summarizedField>Invoice__c.InvoiceDate__c</summarizedField>
    <summaryForeignKey>Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>