force-app/main/default/objects/Account/fields/China_Union_Pay_Pay__c.field-meta.xml
<CustomField>
    <fullName>China_Union_Pay_Pay__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-1984</description>
    <label>China Union Pay (Pay)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>