force-app/main/default/objects/Account/fields/Cleared_Invoice_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Cleared_Invoice_Percentage__c</fullName>
    <formula>Cleared_Invoice_Count__c / (Cleared_Invoice_Count__c + Not_Cleared_Invoice_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cleared Invoice Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>