force-app/main/default/objects/Account/fields/Closed_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Contract_Date__c</fullName>
    <formula>if( text(AccountType__c) = &quot;Partner&quot; , null ,
IF(and(isnull(
if(BillingAmount__c&gt;0,CCD_Zu__c,null)),isnull(CCD_NetSuite__c),isnull(CCD_IO2__c)),null,
TODAY()-max(
if(isnull(TODAY()-
if(BillingAmount__c&gt;0,CCD_Zu__c,null)),0,TODAY()-
if(BillingAmount__c&gt;0,CCD_Zu__c,null)),
if(isnull(TODAY()-CCD_IO2__c),0,TODAY()-CCD_IO2__c),
if(isnull(TODAY()-CCD_NetSuite__c),0,TODAY()-CCD_NetSuite__c))))</formula>
    <label>Closed Contract Date</label>
    <type>Date</type>
</CustomField>