force-app/main/default/objects/Account/fields/Closed_Contract_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Contract_Paid_Date__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-8</description>
    <inlineHelpText>When was the first payment settled for this customer? Filled automatically</inlineHelpText>
    <label>Closed Contract Paid Date</label>
    <type>Date</type>
</CustomField>