force-app/main/default/objects/Account/fields/Combined_Balance__c.field-meta.xml
<CustomField>
    <fullName>Combined_Balance__c</fullName>
    <formula>Account_Balance_2__c +  Netsuite_Open_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>