force-app/main/default/objects/Account/fields/CommissionDate__c.field-meta.xml
<CustomField>
    <fullName>CommissionDate__c</fullName>
    <description>Stakeholder: BI, Sales
https://jira.orderbird.com/browse/CDS-958</description>
    <label>Commission Date</label>
    <type>Date</type>
</CustomField>