force-app/main/default/objects/Account/fields/CompanyRegisterDate__c.field-meta.xml
<CustomField>
    <fullName>CompanyRegisterDate__c</fullName>
    <description>Stakeholder: UNKNOWN // finance has no use for this info, until stakeholder comes forward: not used</description>
    <inlineHelpText>NOT USED</inlineHelpText>
    <label>Company Register Date</label>
    <type>Date</type>
</CustomField>