force-app/main/default/objects/Account/fields/Contact_Lookup_Filter_Error__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lookup_Filter_Error__c</fullName>
    <formula>AND(SF_SoldTo_Contact__r.AccountId &lt;&gt; Id, SF_SoldTo_Contact__r.AccountId &lt;&gt; Parent.Id, SF_SoldTo_Contact__r.AccountId != null) ||
AND(SF_BillTo_Contact__r.AccountId &lt;&gt; Id, SF_BillTo_Contact__r.AccountId &lt;&gt; Parent.Id, SF_BillTo_Contact__r.AccountId != null) ||
AND(SF_Venue_Contact__r.AccountId &lt;&gt; Id, SF_Venue_Contact__r.AccountId &lt;&gt; Parent.Id, SF_Venue_Contact__r.AccountId != null) ||
AND(Primary_Contact__r.AccountId &lt;&gt; Id, Primary_Contact__r.AccountId &lt;&gt; Parent.Id, Primary_Contact__r.AccountId != null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Lookup Filter Error</label>
    <type>Checkbox</type>
</CustomField>