force-app/main/default/objects/Account/fields/ContentfulLink__c.field-meta.xml
<CustomField>
    <fullName>ContentfulLink__c</fullName>
    <description>Stakeholder WIFi https://jira.orderbird.com/browse/CDS-272</description>
    <inlineHelpText>What is the link URL to this accounts contentful profile?</inlineHelpText>
    <label>Contentful Link</label>
    <type>Url</type>
</CustomField>