force-app/main/default/objects/Account/fields/Count_Wire_Transfers__c.field-meta.xml
<CustomField>
    <fullName>Count_Wire_Transfers__c</fullName>
    <label>Count Wire Transfers</label>
    <summaryFilterItems>
        <field>Payment__c.Status__c</field>
        <operation>equals</operation>
        <value>Processed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Payment__c.Type__c</field>
        <operation>equals</operation>
        <value>External</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>