force-app/main/default/objects/Account/fields/Credit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Credit_Balance__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-509</description>
    <inlineHelpText>How much credit does this account have with us?</inlineHelpText>
    <label>Credit Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>