force-app/main/default/objects/Account/fields/Credit_Check_chk__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_chk__c</fullName>
    <label>Credit Check check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>