force-app/main/default/objects/Account/fields/CuisineAndDishes__c.field-meta.xml
<CustomField>
    <fullName>CuisineAndDishes__c</fullName>
    <description>Stakeholder: Sales &amp; Partner (METRO)</description>
    <inlineHelpText>What kind of cuisine gets primarily served in this restaurant? If it isn&apos;t a restaurant, what kind of venue is it? To be filled in once known.</inlineHelpText>
    <label>Cuisine and dishes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>African</fullName>
            </value>
            <value>
                <fullName>American</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Fast Food</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Greek</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Mediterranean</fullName>
            </value>
            <value>
                <fullName>Mexican</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Seafood</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Steakhouse</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Cafe</fullName>
            </value>
            <value>
                <fullName>Ice Cream Parlor</fullName>
            </value>
            <value>
                <fullName>Snack / Takeaway</fullName>
            </value>
            <value>
                <fullName>Pub</fullName>
            </value>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Turkish</fullName>
            </value>
            <value>
                <fullName>Austrian</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Oriental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>