force-app/main/default/objects/Account/fields/customer_Currency_ns__c.field-meta.xml
<CustomField>
    <fullName>customer_Currency_ns__c</fullName>
    <formula>CASE(
(CurrencyIsoCode),
&apos;CHF&apos;,&apos;Schweizer Franken&apos;,
&apos;EUR&apos;,&apos;Euro&apos;,
&apos;GBP&apos;,&apos;Pfund&apos;,
&apos;USD&apos;,&apos;US Dollar&apos;,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>customer : Currency</label>
    <type>Text</type>
</CustomField>