force-app/main/default/objects/Account/fields/customer_Language_ns__c.field-meta.xml
<CustomField>
    <fullName>customer_Language_ns__c</fullName>
    <formula>CASE(PrimaryLanguage__c,
&apos;German&apos;,&apos;German &apos;,
&apos;English&apos;,&apos;English (U.S.)&apos;,
&apos;French&apos;, &apos;French (France)&apos;,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>customer : Language</label>
    <type>Text</type>
</CustomField>