force-app/main/default/objects/Account/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Used for external communication, e.g. on the invoice</inlineHelpText>
    <label>Customer ID</label>
    <type>AutoNumber</type>
</CustomField>