force-app/main/default/objects/Account/fields/CustomerIdText__c.field-meta.xml
<CustomField>
    <fullName>CustomerIdText__c</fullName>
    <description>This exists so that code does not have to consume the auto number. We may occassionally have to edit the autonumber field (temporarily changing the field type) and this cannot be done when it is referenced in code.</description>
    <formula>CustomerID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomerIdText</label>
    <type>Text</type>
</CustomField>