force-app/main/default/objects/Account/fields/Date_when_became_Active_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_when_became_Active_Customer__c</fullName>
    <description>Date when the account became an active customer for the first time.</description>
    <label>Date when became Active Customer</label>
    <type>Date</type>
</CustomField>