force-app/main/default/objects/Account/fields/Days_between_OB_INV_and_CCPD__c.field-meta.xml
<CustomField>
    <fullName>Days_between_OB_INV_and_CCPD__c</fullName>
    <formula>FirstInvoiceDate__c - Related_OB_Invoice__r.InvoiceDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Device Bought to 1st INV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>