force-app/main/default/objects/Account/fields/DefaultPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>DefaultPaymentMethod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Payment Method</label>
    <referenceTo>PaymentMethod__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>