force-app/main/default/objects/Account/fields/Demo_Account__c.field-meta.xml
<CustomField>
    <fullName>Demo_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/CDS-2581</description>
    <inlineHelpText>Is this nota real account and should be excluded from invoicing?</inlineHelpText>
    <label>Demo Account</label>
    <type>Checkbox</type>
</CustomField>