force-app/main/default/objects/Account/fields/Discover_Diners_Pay__c.field-meta.xml
<CustomField>
    <fullName>Discover_Diners_Pay__c</fullName>
    <description>https://jira.orderbird.com/browse/CDS-1984</description>
    <label>Discover / Diners (Pay)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>